# geopedestrian-py

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/source/: api.rst  categories.rst  conf.py  index.rst  services.rst  usage.rst
geopedestrian/: __init__.py  categories.py  services.py
geopedestrian/data/: places-categories-2025.json  places-categories.json
notebooks/: Advanced Mapping.ipynb  EM2024 Final Map.ipynb  Fifteen Minutes Walking.ipynb  Find Bars Nearby.ipynb
